@@ -6,3 +6,5 @@ Version Modified By Date     Comments
 ------- ----------- -------- --------
 0001    B Hagman    09/07/05 Initial coding
 0002    B Hagman    10/03/21 License updates, minor fixes
+                    10/05/19 Added getspectrumanalyzer()
+                    
